# iNaturalistReviewer

./: .gitignore  Pipfile  README.md  deployment.yaml  inrbot-healthcheck.sh  inrbot.sh  job.yaml  jobs.yaml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  upgrade.sh
.github/: ranger.yml
.github/workflows/: prod-error.yml  pythonapp.yml
docs/: review_spec.md
src/: inrbot.py  inrcli.py  manual.py  tools.py  utils.py
tests/: test_inrbot.py
tests/testdata/: both_change.txt  free.txt  free_change.txt  free_source.txt  ina_response.json  license_para.txt  para.txt  para_change.txt  para_nolic.txt  para_source.txt  section.txt  section_badcat.txt  section_badcat_source.txt  section_change.txt  section_change_untagged.txt  section_newline.txt  section_nolic.txt  section_nolic_untagged.txt  section_source.txt  section_untagged.txt  section_untagged_space.txt  self.txt  self_change.txt  self_untagged.txt  wrapper_change.txt
