[tool.poetry]
name = "inaturalistreviewer"
# This version number is ignored
version = "0"
description = ""
authors = ["AntiCompositeNumber"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "~3.9"
requests = "*"
pywikibot = "^7.7.3"
requests-oauthlib = "*"
mwparserfromhell = "*"
Pillow = "*"
waybackpy = "^3.0.6"
ImageHash = "*"
click = "*"
acnutils = {extras = ["db"], version = "^0.6.2"}

[tool.poetry.dev-dependencies]
flake8 = "*"
pytest = "*"
coveralls = "*"
mypy = "*"
black = "*"
types-requests = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
log_level = "info"
addopts = "-v --strict-markers"
markers = [
    "ext_web: marks tests that make HTTP connections outside of Wikimedia"
]

[tool.coverage.run]
branch = true
source = ["src"]
