[tool.poetry]
name = "inaturalistreviewer"
# This version number is ignored
version = "0"
description = ""
authors = ["AntiCompositeNumber"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "~3.11"
requests = "*"
pywikibot = "^9.3.0"
requests-oauthlib = "*"
mwparserfromhell = "*"
Pillow = "*"
waybackpy = "^3.0.6"
ImageHash = "*"
click = "!=8.1.4"  # https://github.com/pallets/click/issues/2558
acnutils = {extras = ["db"], version = "^0.6.2"}

[tool.poetry.dev-dependencies]
flake8 = "*"
pytest = "*"
coveralls = "*"
mypy = "*"
black = "*"
types-requests = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
log_level = "info"
addopts = "-v --strict-markers"
markers = [
    "ext_web: marks tests that make HTTP connections outside of Wikimedia"
]

[tool.coverage.run]
branch = true
source = ["src"]
